--- a/index.css
+++ b/index.css
@@ -218,7 +218,7 @@ footer a {
     "contact-form"
     "blackjack-game"
     "weight-converter"
-    "rdx-landing-page"
+    "rdx-landing-page";
     }
 
   }
