--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
     font-family: montserrat;
     margin: 0px;
     padding: 0px;
+    max-width: 1920px;
 }
 
 /*1 rem = 16px*/
@@ -114,7 +115,6 @@ ul {
     "skillset-header skillset-header skillset-header"
     "coding-skills designer-skills technical-support";
     justify-items: center;
-    align-self: center;
     text-align: center;
     border-bottom: 0.1rem solid #d2d2d2;
 }
@@ -145,16 +145,14 @@ ul {
 
 /*Personal project styles*/
 
-.contact-form, .blackjack-game, .weight-converter, 
-.rdx-landing-page, .coming-soon {
-    width: 22.5rem;
+.contact-form-img, .blackjack-game-img, .weight-converter-img, 
+.rdx-landing-page-img {
+    width: 100%;
     height: 18.75rem;
 }
 
 .personal-projects {
     display:grid;
-    justify-items: center;
-    align-self: center;
     gap: 0.625rem;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 6.25rem 24.75rem 24.75rem;
@@ -163,6 +161,10 @@ ul {
     "contact-form blackjack-game"
     "weight-converter rdx-landing-page";
     text-align: center;
+    justify-items: center;
+    align-items:flex-end;
+    border-bottom: 0.1rem solid red;
+
 }
 
 .projects-header {
@@ -206,9 +208,21 @@ footer a {
 
 }
 /*mobile device styles*/
-@media only screen and (max-width: 425px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+   
+/*My skillset styles*/
+    .my-skillsets {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 6.25rem 10.625rem 10rem;
+    grid-template-areas:
+    "skillset-header skillset-header"
+    "coding-skills designer-skills" 
+    "technical-support technical-support";
+    }
+    
+/*personal projects section*/   
     .personal-projects {
-    grid-template-columns: 26.563rem;
+    grid-template-columns: 1fr;
     grid-template-rows: 1.25rem 24.75rem 24.75rem 24.85rem 24.75rem;
     grid-template-areas: 
     "personal-project-header"
@@ -217,13 +231,10 @@ footer a {
     "weight-converter"
     "rdx-landing-page";
     }
-    body {
-        background-color: blue;
-    }
   }
 
 /*desktop devices*/
-  @media only screen and (min-width: 768px) and (max-width: 1000px) {
+  @media only screen and (min-width: 800px) and (max-width: 1920px) {
     .topnav {
         position:static;
         display: flex;
@@ -236,10 +247,16 @@ footer a {
         flex-direction: row;
         justify-content: center;
         align-items: unset;
-        padding-left: 25rem;
+        /* padding-left: 13rem; */
+        align-items: flex-end;
     }
    
     .topnav .nav-burger-icon {
         display: none;
+        width: 100%;
+    }
+
+    .logo {
+        flex-grow: 2;
     }
 }
