--- a/index.css
+++ b/index.css
@@ -96,7 +96,6 @@ p {
 
 .about-me {
     text-align: center;
-    border-bottom: 0.1rem solid #d2d2d2;
 }
 
 .about-me h2,
@@ -120,7 +119,7 @@ p {
         "coding-skills designer-skills technical-support";
     justify-items: center;
     text-align: center;
-    border-bottom: 0.1rem solid #d2d2d2;
+    background-color: #D9D9D9;
 }
 
 .skillset-header {
@@ -204,12 +203,12 @@ footer {
     margin-top: 30px;
     background-color: #D9D9D9;
     height: 40px;
+    text-align: center;
+    padding-top: 0.3rem;
 }
 
-footer p {
-    text-align: center;
-    padding-top: 10px;
-    padding-right: 10px;
+footer .contact-me-btn {
+    margin-bottom: 0;
 }
 
 footer a {
@@ -227,18 +226,24 @@ footer a {
             "skillset-header skillset-header"
             "coding-skills designer-skills"
             "technical-support technical-support";
+        margin-top: 1rem;
     }
 
     /*personal projects section*/
     .personal-projects {
         grid-template-columns: 1fr;
-        grid-template-rows: 1.25rem 24.75rem 24.75rem 24.85rem 24.75rem;
+        grid-template-rows: 1rem 24.75rem 24.75rem 24.85rem 24.75rem;
         grid-template-areas:
             "personal-project-header"
             "contact-form"
             "blackjack-game"
             "weight-converter"
             "rdx-landing-page";
+        margin-top: 3rem;
+    }
+    .projects-header {
+        margin-top: 0rem;
+        margin-bottom: 0rem;
     }
 }
 
